--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
 .parentContainer {
   width: 100%;
   height: 100vh;
+  padding: 0px !important;
 }
 
+.contentContainer {
+  height: 100vh;
+}
 .postContainer {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  margin: 20px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-content: space-evenly;
+  padding: 0 18px;
+}
+
+.postNumber {
+  padding: 0 18px;
 }
