--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body h1 {
+  margin: 30px 0;
+}
+
 .parentContainer {
   width: 100%;
   height: 100vh;
@@ -6,6 +10,7 @@
 
 .contentContainer {
   height: 100vh;
+  padding: 0 18px;
 }
 
 .postContainer {
@@ -14,11 +19,6 @@
   align-items: space-between;
   align-content: space-around;
   justify-content: flex-start;
-  padding: 0 18px;
-}
-
-.postNumber {
-  padding: 0 18px;
 }
 
 .cardDesign {
