--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 body h1 {
-  margin: 30px 0;
+  margin: 2rem 0;
 }
 
 .parentContainer {
   width: 100%;
   height: 100vh;
-  padding: 0px !important;
+  padding: 0rem !important;
 }
 
 .contentContainer {
@@ -19,12 +19,17 @@ body h1 {
   align-items: space-between;
   align-content: space-around;
   justify-content: flex-start;
+  margin-top: 1rem;
+}
+
+.postNumber {
+  margin: 1rem 0;
 }
 
 .cardDesign {
-  width: 250px;
-  margin-bottom: 20px;
-  margin-right: 20px;
+  width: 18rem;
+  margin-bottom: 2rem;
+  margin-right: 2rem;
 }
 
 .login_signup {
