--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,12 @@ body h1 {
   }
 }
 
+.card-img-top {
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
+}
+
 .moredetails {
   position: absolute;
   width: 100%;
