--- a/src/App.css
+++ b/src/App.css
@@ -60,12 +60,13 @@ body h1 {
   width: 100%;
   height: 15rem;
   object-fit: cover;
+  margin-bottom: 1rem;
 }
 
 .moredetails {
   position: absolute;
-  width: 95%;
-  top: 50%;
+  width: 50rem;
+  top: 35rem;
   left: 50%;
   background-color: white;
   transform: translate(-50%, -75%);
@@ -73,4 +74,44 @@ body h1 {
   border-radius: 3rem;
   z-index: 10;
   box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.2), 0 2rem 5rem 0 rgba(0, 0, 0, 0.19);
+}
+
+.moredetailsimage {
+  width: 20rem;
+  z-index: 20;
+  border-radius: 20px;
+}
+
+.moredetailsimage:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.rendermap {
+  z-index: 10;
+}
+
+.resize-moredetailsimage {
+  position: fixed;
+  z-index: 30;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.close {
+  position: fixed;
+  top: 0rem;
+  right: 2rem;
+}
+
+.close:hover {
+  cursor: pointer;
 }
