--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,15 @@ body h1 {
   margin-bottom: 1rem;
 }
 
+.backdrop {
+  display: block;
+  background-color: rgba(0, 0, 0, 0.4);
+  height: 100vh;
+  width: 100%;
+  z-index: 10;
+  position: absolute;
+}
+
 .moredetails {
   position: absolute;
   width: 50rem;
@@ -72,7 +81,7 @@ body h1 {
   transform: translate(-50%, -75%);
   padding: 0 2rem 3rem 2rem;
   border-radius: 3rem;
-  z-index: 10;
+  z-index: 20;
   box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.2), 0 2rem 5rem 0 rgba(0, 0, 0, 0.19);
 }
 
