--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body h1 {
   flex-wrap: wrap;
   align-items: space-between;
   align-content: space-around;
-  justify-content: flex-start;
+  justify-content: space-between;
   margin-top: 1rem;
 }
 
