--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ body {
   width: 100%;
   background-color: rgba(232, 102, 50);
   display: flex;
+  flex-flow: column wrap;
   align-items: center;
   justify-content: center;
   color: white;
