--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,11 @@ body {
   margin-bottom: 1rem;
 }
 
+.disablescroll {
+  height: 100%;
+  overflow: hidden;
+}
+
 .backdrop {
   display: block;
   background-color: rgba(0, 0, 0, 0.4);
