--- a/src/App.css
+++ b/src/App.css
@@ -21,10 +21,12 @@ body {
   justify-content: center;
 }
 
-.staticContainer {
-  display: block;
+/* .staticContainer {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
   padding: 3rem;
-}
+} */
 
 .home {
   height: 95vh;
@@ -88,8 +90,8 @@ body {
 }
 
 .card-img-top {
-  width: 100%;
-  height: 15rem;
+  width: auto;
+  height: 10rem;
   object-fit: cover;
   margin-bottom: 1rem;
 }
@@ -173,7 +175,14 @@ body {
   }
   .moredetails {
     position: absolute;
-    top: 46rem;
+    top: 52rem;
     width: 98%;
+  }
+
+  .disablescroll {
+    height: '';
+    overflow: auto;
+    /* height: 100%; */
+    /* overflow: hidden; */
   }
 }
