--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,10 @@
 
 body {
   font-family: 'Poppins', sans-serif !important;
-}
-
-.navbar {
-  /* border-bottom: 2px solid rgb(173, 173, 173, 0.5); */
-}
-
-.parentContainer {
-  width: 100%;
-  height: 100vh;
-  padding: 0rem !important;
+  position: relative;
 }
 
 .contentContainer {
-  height: 100vh;
   padding: 0 1rem;
   display: flex;
   justify-content: center;
@@ -54,9 +44,12 @@ body {
 }
 
 .cardDesign {
-  width: 20rem;
-  margin-bottom: 2rem;
-  margin-right: 2rem;
+  width: 22rem;
+  margin-bottom: 1rem;
+}
+
+.card-body {
+  width: 22rem;
 }
 
 .cardDesign:hover {
@@ -96,23 +89,32 @@ body {
   margin-bottom: 1rem;
 }
 
-.disablescroll {
-  height: 100%;
-  overflow: hidden;
-}
-
 .backdrop {
   display: block;
   background-color: rgba(0, 0, 0, 0.4);
-  height: 100vh;
+  min-height: 100%;
   width: 100%;
   z-index: 10;
   position: absolute;
+  overflow: auto;
+}
+
+.viewreviews {
+  position: absolute;
+  width: 45rem;
+  top: 10rem;
+  left: 50%;
+  background-color: white;
+  transform: translate(-50%, -75%);
+  padding: 2rem 2rem 3rem 2rem;
+  border-radius: 3rem;
+  z-index: 20;
+  box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.2), 0 2rem 5rem 0 rgba(0, 0, 0, 0.19);
 }
 
 .moredetails {
   position: absolute;
-  width: 50rem;
+  width: 45rem;
   top: 35rem;
   left: 50%;
   background-color: white;
@@ -163,19 +165,30 @@ body {
   cursor: pointer;
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 767px) {
   .moredetails {
+    width: 98%;
+  }
+
+  .viewreviews {
     width: 98%;
   }
 }
 
-@media screen and (max-width: 410px) {
+@media screen and (max-width: 425px) {
   .signup_instructions {
     display: none;
   }
+
   .moredetails {
     position: absolute;
     top: 52rem;
+    width: 98%;
+  }
+
+  .viewreviews {
+    position: absolute;
+    top: 15rem;
     width: 98%;
   }
 
