--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ body {
 }
 
 .contentContainer {
+  margin-top: 0.5rem;
   padding: 0 1rem;
   display: flex;
   justify-content: center;
@@ -37,7 +38,7 @@ body {
 .home {
   height: 95vh;
   width: 100%;
-  background-color: rgba(232, 102, 50);
+  background-color: #e86632;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
