--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,10 @@ body {
   box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.2), 0 2rem 5rem 0 rgba(0, 0, 0, 0.19);
 }
 
+.closemoredetails:hover {
+  cursor: pointer;
+}
+
 .moredetailsimage {
   height: 19rem;
   z-index: 20;
@@ -136,6 +140,8 @@ body {
   z-index: 30;
   top: 0;
   left: 0;
+  width: 100%;
+  object-fit: contain;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 3rem;
