--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,15 @@ body {
 }
 
 .searchintitle {
-  background-color: white !important;
-  color: #e86632 !important;
+  background-color: #e86632 !important;
+  color: #ffffff !important;
   border: 1px solid #e86632 !important;
   border-left: 0 !important;
-  border-radius: 0 !important;
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+  border-top-right-radius: 15px !important;
+  border-bottom-right-radius: 15px !important;
+  width: 8rem;
 }
 
 .postContainer {
@@ -205,10 +209,7 @@ body {
     width: 98%;
   }
 
-  .disablescroll {
-    height: '';
-    overflow: auto;
-    /* height: 100%; */
-    /* overflow: hidden; */
+  .card-body {
+    width: 100%;
   }
 }
