--- a/src/App.css
+++ b/src/App.css
@@ -199,6 +199,18 @@ body {
   top: 1rem;
   right: 2rem;
   z-index: 40;
+  margin: 0;
+  padding: 0;
+}
+
+.xbutton {
+  box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.2), 0 2rem 5rem 0 rgba(0, 0, 0, 0.19);
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 25px;
+  height: 3rem;
+  width: 3rem;
+  margin-top: 0;
+  text-align: center;
 }
 
 .close:hover {
